[package]
name = "cargo-src"
version = "0.1.0"
authors = ["Andrew Radev <andrey.radev@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/AndrewRadev/cargo-src"
documentation = "https://docs.rs/cargo-src/latest/cargo_src"
homepage = "https://github.com/AndrewRadev/cargo-src"
license = "MIT OR Apache-2.0"
description = "A third-party cargo extension that lists local source locations of dependencies"
categories = [ "command-line-utilities", "development-tools::cargo-plugins" ]

[[bin]]
name = "cargo-src"

[dependencies]
clap = "2.32.0"
cargo = "0.32.0"
dirs = "1.0.5"
