[package]
name = "cargo-local"
version = "0.2.0"
authors = ["Andrew Radev <andrey.radev@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/AndrewRadev/cargo-local"
documentation = "https://docs.rs/cargo-local/latest/cargo_local"
homepage = "https://github.com/AndrewRadev/cargo-local"
license = "MIT OR Apache-2.0"
description = "A third-party cargo extension that lists local source locations of dependencies"
categories = [ "command-line-utilities", "development-tools::cargo-plugins" ]

[[bin]]
name = "cargo-local"

[dependencies]
clap = { version = "2.33.3", default-features = false }
cargo = "0.50.0"
dirs = "3.0.1"
